// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slide /> component should match snapshot 1`] = `
<DocumentFragment>
  <li
    class="inline-flex h-100 relative overflow-hidden"
  >
    <div>
      <p>
        Testing
      </p>
    </div>
  </li>
</DocumentFragment>
`;

exports[`<Slide /> component should math snapshot with tag 1`] = `
<DocumentFragment>
  <span
    class="inline-flex h-100 relative overflow-hidden"
  >
    <div>
      <p>
        Testing
      </p>
    </div>
  </span>
</DocumentFragment>
`;
